Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Result__c/Selenium_Test_Result__c.object-meta.xml
<CustomObject>
    <label>Selenium Test Result</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selenium Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>