Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Result__c/fields/Elapsed_Time_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time_Seconds__c</fullName>
    <label>Elapsed Time (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>