Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Result__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>