Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Result__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>OS + Browser</description>
    <label>Platform</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>