Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Result__c/fields/Result_URL__c.field-meta.xml
<CustomField>
    <fullName>Result_URL__c</fullName>
    <label>Result URL</label>
    <type>Url</type>
</CustomField>