Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Result__c/fields/Selenium_Test_Run__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Run__c</fullName>
    <label>Selenium Test Run</label>
    <referenceTo>Selenium_Test_Run__c</referenceTo>
    <relationshipLabel>Selenium Test Results</relationshipLabel>
    <relationshipName>SeleniumTestResults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>