Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Result__c/fields/Selenium_Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Suite__c</fullName>
    <label>Selenium Test Suite</label>
    <referenceTo>Selenium_Test_Suite__c</referenceTo>
    <relationshipLabel>Selenium Test Results</relationshipLabel>
    <relationshipName>Selenium_Test_Results</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>