Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Result__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <color>#BBBBBB</color>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Starting</fullName>
                <color>#999999</color>
                <label>Starting</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#0B6FCE</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed successfully</fullName>
                <color>#009900</color>
                <label>Completed successfully</label>
            </value>
            <value>
                <fullName>Completed with errors</fullName>
                <color>#CC0000</color>
                <label>Completed with errors</label>
            </value>
            <value>
                <fullName>Provider Failure</fullName>
                <color>#FF6666</color>
                <label>Provider Failure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>